--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -10,8 +10,8 @@
 
       </div>
       <div class="cta">
-        <a routerLink="/login" class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;
-        <a routerLink="/createAccount" class="btn btn-info">Criar Conta</a>
+        <a a routerLink="/login" class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;
+        <a a routerLink="/createAccount" class="btn btn-info">Criar Conta</a>
       <router-outlet></router-outlet>
       </div>
     </div>
@@ -27,8 +27,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a routerLink="/main">Principal</a></li>
-          <li><a routerLink="/about">Sobre nós</a></li>
+          <li><a routerLink="/main">Principal</a></li>
+          <li class="active"><a routerLink="/about">Sobre nós</a></li>
           <li><a routerLink="/services">Serviços</a></li>
           <li><a routerLink="/faq">FAQs</a></li>
           <li><a routerLink="/contacts">Contactos</a></li>
@@ -41,66 +41,60 @@
   <section id="welcome" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container" data-aos="fade-in">
       <h1>Esta é a ET-Costs</h1>
-      <h2>Oferece-lhe uma solução simples para gerir as suas despesas</h2>
+      <h2>Sobre nós</h2>
       <div class="d-flex align-items-center">
         <i class="fas fa-arrow-right get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">Saber mais</a>
+        <a href="#about" class="btn-get-started scrollto">Sobre nós</a>
       </div>
     </div>
   </section><!-- End Welcome -->
 
   <main id="main">
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us">
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about section-bg">
       <div class="container">
 
         <div class="row">
-          <div class="col-xl-4 col-lg-5" data-aos="fade-up">
-            <div class="content">
-              <h3>Porquê  escolher a solução ET-Costs?</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
-              </p>
-              <div class="text-center">
-                <a href="#" class="more-btn">Saber mais <i class="bx bx-chevron-right"></i></a>
-              </div>
-            </div>
+          <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch" data-aos="fade-right">
+            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
-          <div class="col-xl-8 col-lg-7 d-flex">
-            <div class="icon-boxes d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                  </div>
-                </div>
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                  </div>
-                </div>
-              </div>
+
+          <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
+            <h4 data-aos="fade-up">About us</h4>
+            <h3 data-aos="fade-up">Enim quis est voluptatibus aliquid consequatur fugiat</h3>
+            <p data-aos="fade-up">Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
+
+            <div class="icon-box" data-aos="fade-up">
+              <div class="icon"><i class="bx bx-fingerprint"></i></div>
+              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
+
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon"><i class="bx bx-gift"></i></div>
+              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            </div>
+
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <div class="icon"><i class="bx bx-atom"></i></div>
+              <h4 class="title"><a href="">Dine Pad</a></h4>
+              <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+            </div>
+
           </div>
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section>
+    <!-- End About Section -->
 
-  </main><!-- End #main -->
+
+   
+  </main>
+  <!-- End #main -->
 
 
 
