--- a/src/app/modules/contacts/contacts.component.html
+++ b/src/app/modules/contacts/contacts.component.html
@@ -10,8 +10,8 @@
 
       </div>
       <div class="cta">
-        <a routerLink="/login" class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;
-        <a routerLink="/createAccount" class="btn btn-info">Criar Conta</a>
+        <a a routerLink="/login" class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;
+        <a a routerLink="/createAccount" class="btn btn-info">Criar Conta</a>
       <router-outlet></router-outlet>
       </div>
     </div>
@@ -27,11 +27,11 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a routerLink="/main">Principal</a></li>
+          <li><a routerLink="/main">Principal</a></li>
           <li><a routerLink="/about">Sobre nós</a></li>
           <li><a routerLink="/services">Serviços</a></li>
           <li><a routerLink="/faq">FAQs</a></li>
-          <li><a routerLink="/contacts">Contactos</a></li>
+          <li class="active"><a routerLink="/contacts">Contactos</a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -44,63 +44,90 @@
       <h2>Oferece-lhe uma solução simples para gerir as suas despesas</h2>
       <div class="d-flex align-items-center">
         <i class="fas fa-arrow-right get-started-icon"></i>
-        <a href="#about" class="btn-get-started scrollto">Saber mais</a>
+        <a href="#about" class="btn-get-started scrollto">Os nossos contactos</a>
       </div>
     </div>
   </section><!-- End Welcome -->
 
   <main id="main">
 
-    <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-xl-4 col-lg-5" data-aos="fade-up">
-            <div class="content">
-              <h3>Porquê  escolher a solução ET-Costs?</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
-              </p>
-              <div class="text-center">
-                <a href="#" class="more-btn">Saber mais <i class="bx bx-chevron-right"></i></a>
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+        <div class="container">
+  
+          <div class="section-title">
+              <hr>
+            <h2 data-aos="fade-up">Contactos</h2>
+            <p data-aos="fade-up">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
+  
+          <div class="row justify-content-center">
+  
+            <div class="col-xl-3 col-lg-4 mt-4" data-aos="fade-up">
+              <div class="info-box">
+                <i class="bx bx-map"></i>
+                <h3>Our Address</h3>
+                <p>A108 Adam Street, New York, NY 535022</p>
+              </div>
+            </div>
+  
+            <div class="col-xl-3 col-lg-4 mt-4" data-aos="fade-up" data-aos-delay="100">
+              <div class="info-box">
+                <i class="bx bx-envelope"></i>
+                <h3>Email Us</h3>
+                <p>info@example.com<br>contact@example.com</p>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-4 mt-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="info-box">
+                <i class="bx bx-phone-call"></i>
+                <h3>Call Us</h3>
+                <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-8 col-lg-7 d-flex">
-            <div class="icon-boxes d-flex flex-column justify-content-center">
-              <div class="row">
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+  
+          <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-xl-9 col-lg-12 mt-4">
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="form-row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <div class="validate"></div>
+                  </div>
+                  <div class="col-md-6 form-group">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <div class="validate"></div>
                   </div>
                 </div>
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
-                  </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <div class="validate"></div>
                 </div>
-                <div class="col-xl-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-                  <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
-                    <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-                  </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <div class="validate"></div>
                 </div>
-              </div>
+                <div class="mb-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
+              </form>
             </div>
+  
           </div>
+  
         </div>
+      </section><!-- End Contact Section -->
+  
 
-      </div>
-    </section><!-- End Why Us Section -->
 
-  </main><!-- End #main -->
+
+   
+  </main>
+  <!-- End #main -->
 
 
 
