--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -50,16 +50,18 @@
 
         <div class="container-login100-form-btn m-t-17">
           <!--<button class="login100-form-btn" type="submit" [disabled]="!userForm.form.valid"> Login </button>-->
-          <button class="login100-form-btn" type="submit"> Login </button>
+          <button (click)="sendUserName()" class="login100-form-btn" type="submit"> Login </button>
+          
         </div>
 
       </form>
     </div>
   </div>
 </div>
+<app-personal></app-personal>
 
 
 <div id="dropDownSelect1"></div>
-	
+
 
 
