--- a/src/app/modules/personal/personal.component.html
+++ b/src/app/modules/personal/personal.component.html
@@ -165,7 +165,7 @@
             <div class="row">
               <div class="col">
                 <div ngbDropdown class="d-inline-block">
-                  <button class="btn btn-dark" id="dropdownBasic1" ngbDropdownToggle>Ben-Vindo {{username}} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
+                  <button class="btn btn-dark" id="dropdownBasic1" ngbDropdownToggle>Ben-Vindo &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
                   <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                     <button ngbDropdownItem ><i class="fas fa-user"></i> Perfil</button>
                     <button ngbDropdownItem><i class="fas fa-cog"></i> Definições</button>
@@ -435,7 +435,8 @@
           <!-- content 2  -->
           <div *ngIf="content2">
             Fazer procura de despesa
-            <button (click)="xpto()"></button>
+            <br>
+            <!--<span (click)="getUsername()" class="btn btn-primary" >Mostrar</span>-->
 
           </div>
 
