Ready to send expenses

--- a/src/app/modules/public/home/home.component.html
+++ b/src/app/modules/public/home/home.component.html
@@ -1,3 +1,4 @@
+<main id="main">
 <section id="why-us" class="why-us">
     <div class="container">
 
@@ -45,3 +46,4 @@
 
     </div>
   </section>
+</main>
