--- a/src/app/modules/public/services/services.component.html
+++ b/src/app/modules/public/services/services.component.html
@@ -1,3 +1,4 @@
+<main id="main">
     <section id="services" class="services section-bg">
       <div class="container">
         <div class="section-title" data-aos="fade-up">
@@ -53,4 +54,5 @@
 
       </div>
     </section>
+  </main>
    
