--- a/src/app/modules/public/about/about.component.html
+++ b/src/app/modules/public/about/about.component.html
@@ -1,4 +1,5 @@
-    <section id="about" class="about section-bg">
+<main id="main">
+<section id="about" class="about section-bg">
       <div class="container">
 
         <div class="row">
@@ -34,3 +35,4 @@
 
       </div>
     </section>
+  </main>
