--- a/src/app/modules/public/contacts/contacts.component.html
+++ b/src/app/modules/public/contacts/contacts.component.html
@@ -1,4 +1,4 @@
-
+<main id="main">
     <section id="contact" class="contact">
         <div class="container">
   
@@ -68,3 +68,4 @@
   
         </div>
       </section>
+    </main>
