--- a/src/app/modules/public/faq/faq.component.html
+++ b/src/app/modules/public/faq/faq.component.html
@@ -1,3 +1,4 @@
+<main id="main">
     <section id="faq" class="faq section-bg">
         <div class="container">
   
@@ -59,4 +60,5 @@
   
         </div>
       </section>
+    </main>
     
