--- a/src/app/modules/public/public-main/public-main.component.html
+++ b/src/app/modules/public/public-main/public-main.component.html
@@ -27,7 +27,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active">     <a (click)="goToHome()">Principal</a></li>
+          <li class="active"><a (click)="goToHome()">Principal</a></li>
           <li><a (click)="goToAbout()">Sobre nós</a></li>
           <li><a (click)="goToServices()">Serviços</a></li>
           <li><a (click)="goToFaq()">FAQs</a></li>
@@ -51,7 +51,7 @@
   </section>
   <!-- End Welcome -->
 
-  <main id="main">
+
 
     <!-- ======= Why Us Section ======= -->
 
@@ -77,7 +77,7 @@
     
     <!-- End Why Us Section -->
 
-  </main>
+  
   <!-- End #main -->
 
 
@@ -154,6 +154,4 @@
         <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
-  </footer>
-  <!-- End Footer -->
-
+  </footer><!-- End Footer -->
