--- a/src/app/modules/restrict/personal-main/personal-main.component.html
+++ b/src/app/modules/restrict/personal-main/personal-main.component.html
@@ -145,7 +145,7 @@
           <div class="row">
             <div class="col">
               <div ngbDropdown class="d-inline-block">
-                <button class="btn btn-dark" id="dropdownBasic1" ngbDropdownToggle>Ben-Vindo &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
+                <button class="btn btn-dark" id="dropdownBasic1" ngbDropdownToggle>Ben-Vindo {{this.username}} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                   <button ngbDropdownItem ><i class="fas fa-user"></i> Perfil</button>
                   <button ngbDropdownItem><i class="fas fa-cog"></i> Definições</button>
